pkg/controllers/crdcompatibility/bindata/assets/compatibility-requirements-compatibility-requirement-webhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: openshift-compatibility-requirements-apiextensions-openshift-io-v1alpha1-compatibilityrequirement-validation
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    release.openshift.io/feature-gate: "CRDCompatibilityRequirementOperator"
    service.beta.openshift.io/inject-cabundle: "true"
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: compatibility-requirements-controllers-webhook-service
      namespace: openshift-compatibility-requirements-operator
      path: /validate-apiextensions-openshift-io-v1alpha1-compatibilityrequirement
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: compatibilityrequirement.operator.openshift.io
  rules:
  - apiGroups:
    - apiextensions.openshift.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - compatibilityrequirements
  sideEffects: None
